--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Weather App</title>
     <meta charset="UTF-8" />
-    <link href="src/styles.css" />
+    <link href="styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -69,6 +69,6 @@
 
                 <h6></h6>
       
-   <script src="src/index.js"></script>
+   <script src="index.js"></script>
   </body>
 </html>
