--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <br />
    
   </div>
-
-             
-      
+   
    <script src="index.js"></script>
+
+          <a href="https://github.com/Massiels/sheCodes.git">by Massiel Samamé</a>
   </body>
 </html>
