--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
   </div>
    
    <script src="index.js"></script>
+              <br />
 
-          <a href="https://github.com/Massiels/sheCodes.git">by Massiel Samamé</a>
+          <a href="https://github.com/Massiels/sheCodes.git">Open-source code by<h5>Massiel Samamé</h5></a>
   </body>
 </html>
