--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
    <script src="index.js"></script>
               <br />
 
-          <a href="https://github.com/Massiels/sheCodes.git">Open-source code by<h5>Massiel Samamé</h5></a>
+          <p><a href="https://github.com/Massiels/sheCodes.git">Open-source code</a>by Massiel Samamé</p>
   </body>
 </html>
